@@ -42,6 +42,7 @@ Stephen Baillie
 	Changed MOVE and SAIL to queue moves that failed because of lack
 	  of movement points, so that @TURN caravans can cope with weather.
 	Cleaned up TURN processing significantly.
+	Various small changes and fixes
 Nick Hoggard
     Implementation of the EXCHANGE order.
 	Implementation of the TURN order which allows pre-doing turn orders as
