@@ -122,10 +122,6 @@
    -- Figure out how an autoclaim option for studying could be made to work
       [Tom Alsen suggested a 'POOL' command which allows you to pool money
       in a hex for things like studying, upkeep, purchases, etc]
-   -- Consider allowing FP maximums per category (configurable by gamedef)
-      as well as making the game more easily handle higher FP total maximums.
-      (currently the total max number of Faction points is variable, but in
-      order for it to actually 'work' you need to change game-specific stuff)
    -- Show faction of ally in refusal to attack or assassinate.
 
 ** Rules, food
